@@ -1,3 +1,11 @@
+2014-05-09  Florian Weimer  <fweimer@redhat.com>
+
+	* cfgexpand.c (stack_protect_decl_p): New function, extracted from
+	expand_used_vars.
+	(stack_protect_return_slot_p): New function.
+	(expand_used_vars): Call stack_protect_decl_p and
+	stack_protect_return_slot_p for -fstack-protector-strong.
+
 2014-05-06  Kenneth Zadeck  <zadeck@naturalbridge.com>
 
 	PR middle-end/61111
